# automate

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  reusable-build-wheels.yml  reusable-ci.yml  reusable-collect-artifacts.yml  reusable-docs.yml  reusable-publish.yml  reusable-release.yml
src/automate/: __init__.py  __main__.py  changelog.py  cli.py
testdata/: changelog_cymongoose.md  changelog_multi_version.md  changelog_simple.md
tests/: conftest.py  test_changelog.py  test_cli.py
