[project]
name = "automate"
version = "0.1.0"
description = "Reusable CI/CD workflows and release helpers for Python projects"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "Shakeeb Alireza", email = "shakfu@users.noreply.github.com" },
]
keywords = ["ci", "cd", "release", "changelog", "github-actions", "pypi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.1",
]

[project.urls]
Homepage = "https://github.com/shakfu/automate"
Repository = "https://github.com/shakfu/automate"
Issues = "https://github.com/shakfu/automate/issues"

[project.scripts]
automate = "automate.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.14",
    "mypy>=1.19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/automate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.13"
strict = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
